<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingDefaultResource">


    <TextView
        android:id="@+id/loggedInAs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/logged_in_as"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/t6button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/t6button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onT6envClick"
        android:text="@string/goto_t6"
        app:srcCompat="@drawable/t6"
        android:tint="@color/white"
        app:fabCustomSize="100dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/t13button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="onT13envClick"
        android:text="@string/goto_t13"
        app:tint="@color/white"
        app:fabCustomSize="100dp"
        app:srcCompat="@drawable/t13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t6button" />

</androidx.constraintlayout.widget.ConstraintLayout>